--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.12",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -32,7 +34,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "identity-obj-proxy": "^3.0.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-refresh": "^0.9.0",
     "sass-loader": "^10.1.1",
